Implement date-time selection with fetching

--- a/traffic-images-client/package.json
+++ b/traffic-images-client/package.json
@@ -16,14 +16,18 @@
     "framer-motion": "^10.16.4",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.19",
+    "qs": "^6.11.2",
     "react": "18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/qs": "^6.9.8",
     "@types/react": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "eslint": "8.49.0",
