--- a/traffic-images-client/package.json
+++ b/traffic-images-client/package.json
@@ -23,6 +23,7 @@
     "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
     "typescript": "5.2.2"
   }
