Implement test for useDebounce

--- a/traffic-images-client/package.json
+++ b/traffic-images-client/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch --runInBand"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
@@ -27,6 +29,8 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/qs": "^6.9.8",
     "@types/react": "^18.2.21",
@@ -34,6 +38,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "typescript": "5.2.2"
   }
