--- a/traffic-images-client/package.json
+++ b/traffic-images-client/package.json
@@ -29,7 +29,9 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@types/qs": "^6.9.8",
