--- a/traffic-images-client/package.json
+++ b/traffic-images-client/package.json
@@ -43,7 +43,12 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
+    "msw": "^1.3.1",
     "prettier": "^3.0.3",
     "typescript": "5.2.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
